samples/_failures_safe/1761614303_2701ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aec735a.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_4aec735a.c:148: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4aec735a.c:147:5: error: expected declaration or statement at end of input
  147 |     if
      |     ^~
